--- a/src/main/resources/templates/views/adm/usr/ADMUSR001M0.html
+++ b/src/main/resources/templates/views/adm/usr/ADMUSR001M0.html
@@ -33,7 +33,7 @@
 								<label class="form-label text-secondary" style="font-size: 13px;">Company Name</label>
 								<div class="input-group mb-2">
 									<input type="text" class="form-control" id="companyName" name="companyName"
-										maxLength="50" value="" autocomplete="off" required style="height: 40px;">
+										maxLength="50" value="" autocomplete="off" required style="height: 50px;">
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -41,7 +41,7 @@
 									Identification</label>
 								<div class="input-group mb-2">
 									<select class="form-select" id="companyDivision" name="companyDivision"
-										autocomplete="off" required style="height: 40px;">
+										autocomplete="off" required style="height: 50px;" >
 										<option value="1">DUNS Number</option>
 										<option value="2">Corporation Number</option>
 										<option value="3">Business Registration Number</option>
@@ -53,7 +53,7 @@
 									Number</label>
 								<div class="input-group mb-2">
 									<input type="text" class="form-control" id="companyNo" name="companyNo"
-										maxLength="30" value="" autocomplete="off" required style="height: 40px;">
+										maxLength="30" value="" autocomplete="off" required style="height: 50px;">
 								</div>
 							</div>
 						</div>
@@ -62,7 +62,7 @@
 								<label class="form-label text-secondary" style="font-size: 13px;">Country</label>
 								<div class="mb-2">
 									<select class="form-select" id="countryName" name="countryName" autocomplete="off"
-										required style="height: 40px;">
+										required style="height: 50px;">
 										<!-- 일단 하드코딩, 나중에 DB 조회로 변경 -->
 										<option value="Afghanistan">Afghanistan</option>
 										<option value="Åland Islands">Åland Islands</option>
@@ -334,7 +334,7 @@
 									1</label>
 								<div class="input-group mb-2">
 									<input type="text" class="form-control" id="basicAddress" name="basicAddress"
-										maxLength="100" value="" autocomplete="off" required style="height: 40px;">
+										maxLength="100" value="" autocomplete="off" required style="height: 50px;">
 								</div>
 							</div>
 						</div>
@@ -343,7 +343,7 @@
 								<label class="form-label text-secondary" style="font-size: 13px;">Postal Code</label>
 								<div class="input-group mb-2">
 									<input type="text" class="form-control" id="postalCode" name="postalCode"
-										maxLength="10" value="" autocomplete="off" required style="height: 40px;">
+										maxLength="10" value="" autocomplete="off" required style="height: 50px;">
 								</div>
 							</div>
 							<div class="col-md-8">
@@ -351,7 +351,7 @@
 									2</label>
 								<div class="input-group mb-2">
 									<input type="text" class="form-control" id="detailedAddress" name="detailedAddress"
-										maxLength="100" value="" autocomplete="off" required style="height: 40px;">
+										maxLength="100" value="" autocomplete="off" required style="height: 50px;">
 								</div>
 							</div>
 						</div>
@@ -362,7 +362,7 @@
 								<div class="input-group mb-2">
 									<input type="text" class="form-control" id="representativeName"
 										name="representativeName" maxLength="50" value="" autocomplete="off" required
-										style="height: 40px;">
+										style="height: 50px;">
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -370,8 +370,8 @@
 									Homepage</label>
 								<div class="input-group mb-2">
 									<input type="text" class="form-control" id="companyHomepage" name="companyHomepage"
-										maxLength="30" value="www.rnadatasystem.com" autocomplete="off" required
-										style="height: 40px;">
+										maxLength="30" value="" autocomplete="off" required
+										style="height: 50px;">
 								</div>
 							</div>
 							<div class="col-md-4">
@@ -380,33 +380,7 @@
 								<div class="input-group mb-2">
 									<input type="text" class="form-control" id="representativePhone"
 										name="representativePhone" maxLength="30" value="" autocomplete="off" required
-										style="height: 40px;">
-								</div>
-							</div>
-						</div>
-						<div class="row">
-							<div class="col-md-4">
-								<label class="form-label text-secondary" style="font-size: 13px;">PTB Name</label>
-								<div class="input-group mb-2">
-									<input type="text" class="form-control" id="ptbName"
-										name="ptbName" maxLength="50" value="" autocomplete="off" required
-										style="height: 40px;">
-								</div>
-							</div>
-							<div class="col-md-4">
-								<label class="form-label text-secondary" style="font-size: 13px;">PTB Phone Number</label>
-								<div class="input-group mb-2">
-									<input type="text" class="form-control" id="ptbPhoneNumber" name="ptbPhoneNumber"
-										maxLength="30" value="" autocomplete="off" required
-										style="height: 40px;">
-								</div>
-							</div>
-							<div class="col-md-4">
-								<label class="form-label text-secondary" style="font-size: 13px;">PTB Email</label>
-								<div class="input-group mb-2">
-									<input type="text" class="form-control" id="ptbEmail"
-										name="ptbEmail" maxLength="30" value="" autocomplete="off" required
-										style="height: 40px;">
+										style="height: 50px;">
 								</div>
 							</div>
 						</div>
@@ -417,15 +391,15 @@
 								<div class="input-group mb-2">
 									<input type="text" class="form-control" id="useStartDatetime"
 										name="useStartDatetime" maxLength="50" value="" autocomplete="off" required
-										style="height: 40px;" disabled>
+										style="height: 50px;" disabled>
 								</div>
 							</div>
 							<div class="col-md-4">
 								<label class="form-label text-secondary" style="font-size: 13px;">User Register
 									Datetime</label>
 								<div class="input-group mb-2">
-									<input type="text" class="form-control" id="userregdatetime" name="userregdatetime"
-										maxLength="30" value="" autocomplete="off" required style="height: 40px;"
+									<input type="text" class="form-control" id="userregDatetime" name="userregDatetime"
+										maxLength="30" value="" autocomplete="off" required style="height: 50px;"
 										disabled>
 								</div>
 							</div>
@@ -447,7 +421,7 @@
 							</div>
 							<div class="col-md-4">
 								<div class="form-footer">
-									<button type="button" class="btn btn-warning w-100" onclick="updateServiceInfo()">
+									<button type="button" class="btn btn-warning w-100" onclick="updateServiceCode()">
 										End of Use
 									</button>
 								</div>
@@ -473,16 +447,10 @@
 			console.log("Document is ready.");
 			//화면 접속시 바로 조회
 			main();
-			//send버튼 누르면, 조건적용하여 검색
-			$("#send").click(main);
-			//엔터키누르면, 조건적용하여 검색
-			$("input").on("keyup", function (key) {
-				if (key.keyCode == 13) {
-					main();
-				}
-			});
 		});
-
+		
+		var csNo;
+		var statDvCd; 
 
 
 
@@ -506,155 +474,191 @@
 			gf_Transaction(SelectCompany, fn_callback);
 
 		}
-
-		/*
-		function fetchCompanyData() {
-			$.ajax({
-				type: "POST", // 또는 GET
-				url: "/ADMUSR001M0SelectCompList", // 서버에서 데이터를 가져올 API 엔드포인트
-				async: false, // 비동기 요청 설정
-				dataType: "json", // JSON 데이터를 받아옴
-				contentType: "application/json; charset=utf-8",
-				success: function (data) {
-					console.log("Data loaded successfully:", data);
-
-					// 서버에서 데이터가 정상적으로 받아왔을 때
-					if (data && data.length > 0) {
-						var companyData = data[0]; // 데이터 배열의 첫 번째 요소를 사용
-						// companyName input 폼에 compnm 값을 설정
-						$("#companyName").val(companyData.compNm); 
-					}
-				},
-				error: function (xhr, status, error) {
-					console.error("Error fetching company data:", status, error);
-				}
-			});
+		
+		function fn_updateCs(input) {
+			console.log("updateCs input : " + input);
+			var option = {
+					   id          : "updateList"
+				     , type        : "post"
+					 , url         : "/ADMUSR001M0UpdateServiceCode"
+					 , async       : true
+					 , dataType    : "text"
+					 , contentType : "application/json; charset=utf-8"
+					 , data        : input
+		             };
+		
+			gf_Transaction(option, fn_callback );
 		}
-		*/
+		
 
 
 		function main() {
 			getCsList(
 				(input = JSON.stringify({
-					csNo: $("#csNo").val()
+					
 				}))
 			);
 		}
 
 		// AJAX 응답을 처리할 콜백 함수
-		function fn_callback(response) {
-			// response는 JSON 형식으로 응답된 데이터
-			console.log("Response received: ", response);
-
-			if (response && response.data && response.data.length > 0) {
-				// response에서 값 추출
-				var compNm = response.data[0].compNm;
-				var compNoDvCd = response.data[0].compNoDvCd
-				var compNo = response.data[0].compNo
-				var countryNmEng = response.data[0].countryNmEng
-				var addrs = response.data[0].addrs
-				var dtlsAddrs = response.data[0].dtlsAddrs
-				var postNo = response.data[0].postNo
-				var reperNm = response.data[0].reperNm
-				var repPhNo = response.data[0].repPhNo
-				var ptbNm = response.data[0].ptbNm
-				var ptbPhNo = response.data[0].ptbPhNo
-				//var ptbEmail = reponse.data[0].ptbEmail
-				var useStrDtm = response.data[0].useStrDtm
-				var frstRegDtm = response.data[0].frstRegDtm
-
-
-				// 폼 요소에 값 설정
-				document.getElementById("companyName").value = compNm;
-				document.getElementById("companyNo").value = compNo;
-				document.getElementById("countryName").value = countryNmEng;
-				document.getElementById("basicAddress").value = addrs;
-				document.getElementById("detailedAddress").value = dtlsAddrs;
-				document.getElementById("postalCode").value = postNo;
-				document.getElementById("representativeName").value = reperNm;
-				document.getElementById("representativePhone").value = repPhNo;
-				document.getElementById("ptbName").value = ptbNm;
-				document.getElementById("ptbPhoneNumber").value = ptbPhNo;
-				//document.getElementById("ptbEmail").value = ptbEmail;
-				document.getElementById("useStartDatetime").value = useStrDtm;
-				document.getElementById("userregdatetime").value = frstRegDtm;
+		function fn_callback(result) {
+				//console.log("fn_callback : " + result.id);
+					
+					switch (result.id) {
+						case "SelectCompList":
+							
+							if (result && result.data && result.data.length > 0) {
+								// response에서 값 추출
+								var compNm = result.data[0].compNm;
+								var compNoDvCd = result.data[0].compNoDvCd;
+								var compNo = result.data[0].compNo;
+								var countryNmEng = result.data[0].countryNmEng;
+								var addrs = result.data[0].addrs;
+								var dtlsAddrs = result.data[0].dtlsAddrs;
+								var postNo = result.data[0].postNo;
+								var reperNm = result.data[0].reperNm;
+								var repPhNo = result.data[0].repPhNo;
+								var useStrDtm = result.data[0].useStrDtm;
+								var frstRegDtm = result.data[0].frstRegDtm;
+								var compHmpgUrl = result.data[0].compHmpgUrl;
+								csNo = result.data[0].csNo;
+								statDvCd = result.data[0].statDvCd;
 
 
-				if (compNoDvCd == 1) {
-					document.getElementById("companyDivision").value = "1";
-				} else if (compNoDvCd == 2) {
-					document.getElementById("companyDivision").value = "2";
-				} else if (compNoDvCd == 3) {
-					document.getElementById("companyDivision").value = "3";
-				};
+								// 폼 요소에 값 설정
+								document.getElementById("companyName").value = compNm;
+								document.getElementById("companyNo").value = compNo;
+								document.getElementById("countryName").value = countryNmEng;
+								document.getElementById("basicAddress").value = addrs;
+								document.getElementById("detailedAddress").value = dtlsAddrs;
+								document.getElementById("postalCode").value = postNo;
+								document.getElementById("representativeName").value = reperNm;
+								document.getElementById("representativePhone").value = repPhNo;
+								document.getElementById("useStartDatetime").value = useStrDtm;
+								document.getElementById("userregDatetime").value = frstRegDtm;
+								document.getElementById("companyHomepage").value = compHmpgUrl;
+								
+								cs
+
+								if (compNoDvCd == 1) {
+									document.getElementById("companyDivision").value = "1";
+								} else if (compNoDvCd == 2) {
+									document.getElementById("companyDivision").value = "2";
+								} else if (compNoDvCd == 3) {
+									document.getElementById("companyDivision").value = "3";
+								};
 
 
-			} else {
-				console.log("No data found.");
-			}
-		}
+							} else {
+								console.log("No data found.");
+							}
+							
+							
+						break;
+						case "insertList":
+							
+							main();
+							
+						break;
+						case "updateList":
+							
+							main();
+							alert("관리자가 승인 후 처리 될 예정입니다.")
+							
+						break;
+					}
+		} 
+		
+		
+		
 
 
 		function saveCompanyInfo() {
 			// 입력 필드에서 값 수집
-			const companyName = document.getElementById("companyName").value.trim();
-			const companyDivision = document.getElementById("companyDivision").value.trim();
-			const companyNo = document.getElementById("companyNo").value.trim();
-			const countryName = document.getElementById("countryName").value.trim();
-			const basicAddress = document.getElementById("basicAddress").value.trim();
-			const detailedAddress = document.getElementById("detailedAddress").value.trim();
-			const postalCode = document.getElementById("postalCode").value.trim();
-			const representativeName = document.getElementById("representativeName").value.trim();
-			const representativePhone = document.getElementById("representativePhone").value.trim();
-			const useStartDatetime = document.getElementById("useStartDatetime").value.trim();
-			const userregdatetime = document.getElementById("userregdatetime").value.trim();
+			const compNm = document.getElementById("companyName").value.trim();
+			const compNoDvCd = document.getElementById("companyDivision").value.trim();
+			const compNo = document.getElementById("companyNo").value.trim();
+			const countryNmEng = document.getElementById("countryName").value.trim();
+			const addrs = document.getElementById("basicAddress").value.trim();
+			const dtlsAddrs = document.getElementById("detailedAddress").value.trim();
+			const postNo = document.getElementById("postalCode").value.trim();
+			const reperNm = document.getElementById("representativeName").value.trim();
+			const repPhNo = document.getElementById("representativePhone").value.trim();
+			const useStrDtm = document.getElementById("useStartDatetime").value.trim();
+			const frstRegDtm = document.getElementById("userregDatetime").value.trim();
+			const compHmpgUrl = document.getElementById("companyHomepage").value.trim();
 
 			//필수 항목 체크
-			if (!companyName) {
+			
+			if (!compNm) {
 				alert("회사 이름을 입력하세요.");
 				document.getElementById("companyName").focus();
-				return; // 제출 중단
+				return;
 			}
 
-			if (!representativeName) {
+			if (!reperNm) {
 				alert("대표자명을 입력하세요.");
 				document.getElementById("representativeName").focus();
-				return; // 제출 중단
-			}
-
-			if (!representativeName) {
-				alert("대표자명을 입력하세요.");
-				document.getElementById("representativeName").focus();
-				return; // 제출 중단
+				return;
 			}
 
 
-		};
+			// 유효성 검사를 통과한 경우에만 데이터 전송
+			const companyData = {
+					compNm,
+					compNoDvCd,
+					compNo,
+					countryNmEng,
+					addrs,
+					dtlsAddrs,
+					postNo,
+					reperNm,
+					repPhNo,
+					useStrDtm,
+					frstRegDtm,
+					compHmpgUrl
+			};
 
-		// AJAX 요청을 통해 데이터 전송
-		$.ajax({
-			type: "POST",
-			url: "/ADMUSR001M0UpdateCompList", // API 엔드포인트 주소
-			contentType: "application/json; charset=utf-8",
-			data: JSON.stringify(companyData), // JSON 문자열로 변환
-			dataType: "json",
-			success: function (data) {
-				// 성공 응답 처리
-				if (data && data.length > 0) {
-					alert("Company information saved successfully!");
-					// 추가 작업 필요 시 여기에 작성
-				} else {
-					alert("Failed to save company information: " + response.message);
+
+
+
+			// AJAX 요청을 통해 데이터 전송
+			$.ajax({
+				type: "POST",
+				url: "/ADMUSR001M0UpdateCompList", // API 엔드포인트 주소
+				contentType: "application/json; charset=utf-8",
+				data: JSON.stringify(companyData), // JSON 문자열로 변환
+				dataType: "json",
+				success: function (data) {
+					console.log("Response data: ", data);
+					// 성공 응답 처리
+					if (data.resultCode === "200") {
+						alert("Company information saved successfully!");
+						// 추가 작업 필요 시 여기에 작성
+					} else {
+						alert("Failed to save company information: " + data.message);
+					}
+				},
+				error: function (xhr, status, error) {
+					// 오류 처리
+
+					console.error("Error occurred: ", status, error);
+					alert("An error occurred while saving the data.");
 				}
-			},
-			error: function (xhr, status, error) {
-				// 오류 처리
-
-				console.error("Error occurred: ", status, error);
-				alert("An error occurred while saving the data.");
-			}
-		});
-
+			});
+		}
+		
+		function updateServiceCode(){
+			var input = JSON.stringify({
+				
+			})
+			
+			fn_updateCs(input)
+			
+			
+			
+		}
+		
 
 	</script>
 </th:block>
